fast_image_convertion_native/fic_fpng/src/wrapper.rs

/* automatically generated by rust-bindgen 0.72.1 */

unsafe extern "C" {
    pub fn fpng_init_wrapper();
}
unsafe extern "C" {
    pub fn fpng_cpu_supports_sse41_wrapper() -> bool;
}
unsafe extern "C" {
    pub fn fpng_encode_image_to_memory_wrapper(
        image: *const ::std::os::raw::c_void,
        width: u32,
        height: u32,
        num_chans: u32,
        out_data: *mut *mut u8,
        out_size: *mut usize,
        out_context: *mut *mut ::std::os::raw::c_void,
        flags: u32,
    ) -> bool;
}
unsafe extern "C" {
    pub fn fpng_decode_memory_wrapper(
        image: *const ::std::os::raw::c_void,
        image_size: u32,
        out_data: *mut *mut u8,
        out_size: *mut usize,
        out_width: *mut u32,
        out_height: *mut u32,
        out_channels_in_file: *mut u32,
        desired_channels: u32,
        out_context: *mut *mut ::std::os::raw::c_void,
    ) -> i32;
}
unsafe extern "C" {
    pub fn fpng_free_wrapper(context: *mut ::std::os::raw::c_void);
}
